--- a/content/resources/mit6_438f14_lec10.md
+++ b/content/resources/mit6_438f14_lec10.md
@@ -4,6 +4,7 @@ description: This file contains information regarding sum-product on factor grap
   map elimination.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/64772be3dfc6b9ef7f598e1cca14f1f5_MIT6_438F14_Lec10.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 10
 uid: 64772be3-dfc6-b9ef-7f59-8e1cca14f1f5
