--- a/content/resources/mit6_438f14_lec12.md
+++ b/content/resources/mit6_438f14_lec12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding gaussian belief propagation.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/6a7ca2bf29cf5135ea5df3534463ff1f_MIT6_438F14_Lec12.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 12
 uid: 6a7ca2bf-29cf-5135-ea5d-f3534463ff1f
