--- a/content/resources/mit6_438f14_lec13.md
+++ b/content/resources/mit6_438f14_lec13.md
@@ -4,6 +4,7 @@ description: 'This file contains information regarding bp on gaussian hidden mar
   models: kalman filtering.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/6a29d3d38474e9c62b746fa646899552_MIT6_438F14_Lec13.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 13
 uid: 6a29d3d3-8474-e9c6-2b74-6fa646899552
