--- a/content/resources/mit6_438f14_lec14.md
+++ b/content/resources/mit6_438f14_lec14.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding the junction tree algorithm.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/a49d895264467b7e118bf0602616cc37_MIT6_438F14_Lec14.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 14
 uid: a49d8952-6446-7b7e-118b-f0602616cc37
