--- a/content/resources/mit6_438f14_lec18.md
+++ b/content/resources/mit6_438f14_lec18.md
@@ -4,6 +4,7 @@ description: This file contains information regarding markov chain monte carlo m
   and approximate map.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/e193ad751ae309992372b55e70b8a080_MIT6_438F14_Lec18.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 18
 uid: e193ad75-1ae3-0999-2372-b55e70b8a080
