--- a/content/resources/mit6_438f14_lec19.md
+++ b/content/resources/mit6_438f14_lec19.md
@@ -4,6 +4,7 @@ description: 'This file contains information regarding approximate inference: im
   sampling and particle filters.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/c3901f6fb6213d7966caace10bd663aa_MIT6_438F14_Lec19.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 19
 uid: c3901f6f-b621-3d79-66ca-ace10bd663aa
