--- a/content/resources/mit6_438f14_lec20.md
+++ b/content/resources/mit6_438f14_lec20.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding learning graphical models.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/f4ec8e2913228f8cc644aceba43ff5e4_MIT6_438F14_Lec20.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 20
 uid: f4ec8e29-1322-8f8c-c644-aceba43ff5e4
