--- a/content/resources/mit6_438f14_lec21.md
+++ b/content/resources/mit6_438f14_lec21.md
@@ -4,6 +4,7 @@ description: This file contains information regarding learning parameters of an 
   graphical model.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/e42e8ff4f0e8e2addf43de42d4f96062_MIT6_438F14_Lec21.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 21
 uid: e42e8ff4-f0e8-e2ad-df43-de42d4f96062
