--- a/content/resources/mit6_438f14_lec22.md
+++ b/content/resources/mit6_438f14_lec22.md
@@ -4,6 +4,7 @@ description: This file contains information regarding parameter estimation from 
   observations.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/7b1e302a77ea08f830f9adb9920ade43_MIT6_438F14_Lec22.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 22
 uid: 7b1e302a-77ea-08f8-30f9-adb9920ade43
