--- a/content/resources/mit6_438f14_lec23.md
+++ b/content/resources/mit6_438f14_lec23.md
@@ -4,6 +4,7 @@ description: This file contains information regarding learning structure in dire
   graphs.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/0446f83b8b5a3768dc349d8d8c8fd4be_MIT6_438F14_Lec23.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 23
 uid: 0446f83b-8b5a-3768-dc34-9d8d8c8fd4be
