--- a/content/resources/mit6_438f14_lec24.md
+++ b/content/resources/mit6_438f14_lec24.md
@@ -4,6 +4,7 @@ description: This file contains information regarding learning exponential famil
   models.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/42cd38e171046c8b0d912856e966bdc2_MIT6_438F14_Lec24.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 24
 uid: 42cd38e1-7104-6c8b-0d91-2856e966bdc2
