--- a/content/resources/mit6_438f14_lec3.md
+++ b/content/resources/mit6_438f14_lec3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding undirected graphical models.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/ad67edc82806a92982df67589e58be63_MIT6_438F14_Lec3.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 3
 uid: ad67edc8-2806-a929-82df-67589e58be63
