--- a/content/resources/mit6_438f14_lec7.md
+++ b/content/resources/mit6_438f14_lec7.md
@@ -4,6 +4,7 @@ description: 'This file contains information regarding inference on graphs: the 
   algorithm.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/bdd8037261f666e8971a6af984146877_MIT6_438F14_Lec7.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: Lecture Notes on Algorithms for Inference, Lecture 7
 uid: bdd80372-61f6-66e8-971a-6af984146877
