--- a/content/resources/mit6_438f14_lec8.md
+++ b/content/resources/mit6_438f14_lec8.md
@@ -4,6 +4,7 @@ description: 'This file contains information regarding inference on trees: sum-p
   algorithm.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/1faaccb44f78c4f4e99c6814842082a0_MIT6_438F14_Lec8.pdf
 file_type: application/pdf
+parent_uid: 78c7f9d1-dcdf-dabc-ca71-269d259e4471
 resourcetype: Document
 title: 'Lecture Notes on Algorithms for Inference, Lecture 8 '
 uid: 1faaccb4-4f78-c4f4-e99c-6814842082a0
