--- a/content/resources/mit6_438f14_ps1.md
+++ b/content/resources/mit6_438f14_ps1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to Problem Set 1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/c0fcb5ffcbb11bf8537f9ee0db270ed5_MIT6_438F14_ps1.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 1 on Algorithms for Inference
 uid: c0fcb5ff-cbb1-1bf8-537f-9ee0db270ed5
