--- a/content/resources/mit6_438f14_ps2.md
+++ b/content/resources/mit6_438f14_ps2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to Problem Set 2.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/7a189e8509d1ac6de23953902525d4d3_MIT6_438F14_ps2.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 2 on Algorithms for Inference
 uid: 7a189e85-09d1-ac6d-e239-53902525d4d3
