--- a/content/resources/mit6_438f14_ps3.md
+++ b/content/resources/mit6_438f14_ps3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to Problem Set 3.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/8329bcddae6a0560261612dc7d00bc1e_MIT6_438F14_ps3.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 3 on Algorithms for Inference
 uid: 8329bcdd-ae6a-0560-2616-12dc7d00bc1e
