--- a/content/resources/mit6_438f14_ps5.md
+++ b/content/resources/mit6_438f14_ps5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to Problem Set 5.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/4296a8e7f647f9d37da506ed205afedd_MIT6_438F14_ps5.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 5 on Algorithms for Inference
 uid: 4296a8e7-f647-f9d3-7da5-06ed205afedd
