--- a/content/resources/mit6_438f14_ps6.md
+++ b/content/resources/mit6_438f14_ps6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to Problem Set 6.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/05332b3fd938094c86f581c57ace5e6c_MIT6_438F14_ps6.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 6 on Algorithms for Inference
 uid: 05332b3f-d938-094c-86f5-81c57ace5e6c
