--- a/content/resources/mit6_438f14_ps7.md
+++ b/content/resources/mit6_438f14_ps7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to Problem Set 7.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/612eb638f14dfec3e99bc87936238122_MIT6_438F14_ps7.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 7 on Algorithms for Inference
 uid: 612eb638-f14d-fec3-e99b-c87936238122
