--- a/content/resources/mit6_438f14_ps8.md
+++ b/content/resources/mit6_438f14_ps8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to Problem Set 8.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/8e5399ed16b7442dc698d95ae132f6de_MIT6_438F14_ps8.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 8 on Algorithms for Inference
 uid: 8e5399ed-16b7-442d-c698-d95ae132f6de
