--- a/content/resources/mit6_438f14_ps9.md
+++ b/content/resources/mit6_438f14_ps9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: "This resource contains the information related to problem Set 9.\r\n"
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/390528ac1e1ea417ee335a2e2de75bcb_MIT6_438F14_ps9.pdf
 file_type: application/pdf
+parent_uid: e4e26ff3-b747-5512-2af9-c34cec428488
 resourcetype: Document
 title: Problem Set 9 on Algorithms for Inference
 uid: 390528ac-1e1e-a417-ee33-5a2e2de75bcb
