--- a/content/resources/mit6_438f14_q11_1.md
+++ b/content/resources/mit6_438f14_q11_1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding quiz 1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/0b970582949f1a36df81d1530c67ecf8_MIT6_438F14_q11_1.pdf
 file_type: application/pdf
+parent_uid: 99eafc8b-caa6-526b-d145-62ddee165496
 resourcetype: Document
 title: Algorithms for Inference, Exam 1, 2011
 uid: 0b970582-949f-1a36-df81-d1530c67ecf8
