--- a/content/resources/mit6_438f14_q13_2.md
+++ b/content/resources/mit6_438f14_q13_2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding quiz 2.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/03d0532e54b81cabcb5103c821b48bda_MIT6_438F14_q13_2.pdf
 file_type: application/pdf
+parent_uid: 99eafc8b-caa6-526b-d145-62ddee165496
 resourcetype: Document
 title: Algorithms for Inference, Exam 2, 2013
 uid: 03d0532e-54b8-1cab-cb51-03c821b48bda
