--- a/content/resources/mit6_438f14_q14_1.md
+++ b/content/resources/mit6_438f14_q14_1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding quiz 1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/86f860d20e0dacc42f95d2316a10caea_MIT6_438F14_q14_1.pdf
 file_type: application/pdf
+parent_uid: 99eafc8b-caa6-526b-d145-62ddee165496
 resourcetype: Document
 title: Algorithms for Inference, Exam 1, 2014
 uid: 86f860d2-0e0d-acc4-2f95-d2316a10caea
