--- a/content/resources/mit6_438f14_q14_1_sol1and2.md
+++ b/content/resources/mit6_438f14_q14_1_sol1and2.md
@@ -4,6 +4,7 @@ description: 'This file contains information regarding quiz 1 solutions: problem
   and 2.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/23d6c961ee8fd8c8862c9769f803e37c_MIT6_438F14_q14_1_sol1and2.pdf
 file_type: application/pdf
+parent_uid: 99eafc8b-caa6-526b-d145-62ddee165496
 resourcetype: Document
 title: Algorithms for Inference, Solutions to Exam 1 and 2, 2014
 uid: 23d6c961-ee8f-d8c8-862c-9769f803e37c
