--- a/content/resources/mit6_438f14_rec1.md
+++ b/content/resources/mit6_438f14_rec1.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/fe22c221d3970d565fd98272248f2320_MIT6_438F14_rec1.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 1
 uid: fe22c221-d397-0d56-5fd9-8272248f2320
