--- a/content/resources/mit6_438f14_rec12.md
+++ b/content/resources/mit6_438f14_rec12.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 12.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/94bdf6a5fd5c7634f3636968fb3d4ede_MIT6_438F14_rec12.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 12
 uid: 94bdf6a5-fd5c-7634-f363-6968fb3d4ede
