--- a/content/resources/mit6_438f14_rec2.md
+++ b/content/resources/mit6_438f14_rec2.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 2.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/1e0f46e2f4422a2de584d3618944766b_MIT6_438F14_rec2.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 2
 uid: 1e0f46e2-f442-2a2d-e584-d3618944766b
