--- a/content/resources/mit6_438f14_rec4.md
+++ b/content/resources/mit6_438f14_rec4.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 4.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/ac39d786c86c4909bd83ce0de592375b_MIT6_438F14_rec4.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 4
 uid: ac39d786-c86c-4909-bd83-ce0de592375b
