--- a/content/resources/mit6_438f14_rec5.md
+++ b/content/resources/mit6_438f14_rec5.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 5.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/57f231bb7fc9647e7553330536245da3_MIT6_438F14_rec5.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 5
 uid: 57f231bb-7fc9-647e-7553-330536245da3
