--- a/content/resources/mit6_438f14_rec6.md
+++ b/content/resources/mit6_438f14_rec6.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 6.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/763a5d79a308ad3a7b2c72d026fcb2ef_MIT6_438F14_rec6.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 6
 uid: 763a5d79-a308-ad3a-7b2c-72d026fcb2ef
