--- a/content/resources/mit6_438f14_rec8.md
+++ b/content/resources/mit6_438f14_rec8.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 8.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/176d4c3a360b7ee4a32169f551b0722d_MIT6_438F14_rec8.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 8
 uid: 176d4c3a-360b-7ee4-a321-69f551b0722d
