--- a/content/resources/mit6_438f14_rec9.md
+++ b/content/resources/mit6_438f14_rec9.md
@@ -4,6 +4,7 @@ description: This resource contains the information regarding Recitation Notes o
   Algorithms for Inference, Recitation 9.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-438-algorithms-for-inference-fall-2014/cafa48106e92c1169a8a44fc660e4be0_MIT6_438F14_rec9.pdf
 file_type: application/pdf
+parent_uid: 95d99fa6-b4c9-e0e4-c0c6-45fc32e061f7
 resourcetype: Document
 title: Recitation Notes on Algorithms for Inference, Recitation 9
 uid: cafa4810-6e92-c116-9a8a-44fc660e4be0
